# obol-dvt-blueprint

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  blueprint.json  build.rs  cargo-generate.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  verify-template.yml
contracts/src/: ObolDvtBlueprint.sol
docker/: entrypoint.sh
src/: docker.rs  lib.rs  main.rs  network.rs  operator.rs
