[package]
name = "obol-dvt-blueprint"
version = "0.1.0"
edition = "2021"
description = "A blueprint to create an Obol distributed validator cluster"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/obol-dvt-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "1.41", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
bollard = "0.16.1"
tempfile = "3.13.0" # TODO: Remove, only for testing
serde = { version = "1", features = ["derive"] }

[dependencies.gadget-sdk]
# TODO
git = "https://github.com/tangle-network/gadget"
default-features = false
features = ["std", "getrandom"]

[dependencies.libp2p]
version = "0.54.1"
features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "yamux",
    "tcp",
    "quic",
    "request-response",
    "cbor",
    "identify",
    "kad",
    "dcutr",
    "relay",
    "ping",
    "dns",
    "autonat",
]

[build-dependencies]
# TODO
blueprint-metadata = { git = "https://github.com/tangle-network/gadget" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "obol-dvt-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { evm = "ObolDvtBlueprint" }