[package]
name = "obol-dvt-blueprint"
version = "0.1.0"
edition = "2021"
description = "A blueprint to create an Obol distributed validator cluster"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/obol-dvt-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
tokio = { version = "1.41", default-features = false, features = ["full"] }
serde = { version = "1", features = ["derive"] }

[dependencies.gadget-sdk]
version = "0.2.3"
features = ["getrandom"]

[dependencies.libp2p]
version = "0.54.1"
features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "yamux",
    "tcp",
    "quic",
    "request-response",
    "cbor",
    "identify",
    "kad",
    "dcutr",
    "relay",
    "ping",
    "dns",
    "autonat",
]

[build-dependencies]
blueprint-metadata = "0.1.6"

[lib]
path = "src/lib.rs"

[[bin]]
name = "obol-dvt-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "ObolDvtBlueprint" }